<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="moe.lz233.meizugravity.controller.activity.MainActivity">
    <item
        android:id="@+id/actionSettings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings"
        android:title="@string/actionSettings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionOpenCloudMusic"
        android:orderInCategory="100"
        android:title="@string/actionOpenCloudMusic"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionDeviceInfo"
        android:orderInCategory="100"
        android:title="@string/actionDeviceInfo"
        app:showAsAction="never" />
</menu>
