<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/content_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deviceName"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/deviceNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin"
            android:text="@string/deviceID"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/deviceIDTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin"
            android:text="@string/deviceVer"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/deviceVerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin"
            android:text="@string/deviceVersionCode"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/deviceVersionCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin"
            android:text="@string/deviceBspVer"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/deviceBspVerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin"
            android:text="@string/deviceBootVer"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/deviceBootVerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin"
            android:text="@string/deviceKernelVer"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/deviceKernelVerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent2" />
    </LinearLayout>
</LinearLayout>